--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -53,7 +53,9 @@
     "dates = [['2019-01-01', '2019-06-30'],\n",
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
-    "         ['2020-07-01', '2020-12-31']]"
+    "         ['2020-07-01', '2020-12-31']]\n",
+    "\n",
+    "inputs = {'sat_name': 'S1'}"
    ]
   },
   {
@@ -65,25 +67,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "progress  >>>  processing ArgyleAirport: ['2019-01-01', '2019-06-30']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 25 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing ArgyleAirport: ['2019-07-01', '2019-12-31']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 29 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing ArgyleAirport: ['2020-01-01', '2020-06-30']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 29 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing ArgyleAirport: ['2020-07-01', '2020-12-31']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 28 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing IndianBay: ['2019-01-01', '2019-06-30']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 26 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing IndianBay: ['2019-07-01', '2019-12-31']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 42 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing IndianBay: ['2020-01-01', '2020-06-30']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 36 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing IndianBay: ['2020-07-01', '2020-12-31']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 35 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing SaltWhistleBay: ['2019-01-01', '2019-06-30']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 26 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing SaltWhistleBay: ['2019-07-01', '2019-12-31']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 42 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing SaltWhistleBay: ['2020-01-01', '2020-06-30']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 36 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n",
+      "progress  >>>  processing SaltWhistleBay: ['2020-07-01', '2020-12-31']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 35 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image retreived\n",
+      "*******\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'bands'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-bd0eab0f66fd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mNOC_download\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mretrieve_median_sar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m \u001b[0mmetadata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNOC_download\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave_metadata\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msettings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_download.py\u001b[0m in \u001b[0;36msave_metadata\u001b[1;34m(settings)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0msite_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'site_name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mmedian_dir_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'median_dir_path'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mband_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msettings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'bands'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msat_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m# initialize metadata dict\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'bands'"
+     ]
+    }
+   ],
    "source": [
     "for site in sites:\n",
     "    for date_pair in dates:\n",
-    "\n",
-    "        site_name = site[:site.find('.')]\n",
-    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "        \n",
     "        kml_filepath = os.path.join(sites_dir_path, site)\n",
     "        kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
     "        roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
     "\n",
-    "        inputs = {'polygon': roi_polygon, 'dates': date_pair, 'sat_name': 'S1',\n",
-    "                  'site_name': site_name, 'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
-    "\n",
+    "        site_name = site[:site.find('.')]\n",
+    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "        inputs['polygon'] = roi_polygon\n",
+    "        inputs['site_name'] = site_name\n",
+    "        inputs['dates'] = date_pair \n",
+    "        inputs['median_dir_path'] = median_dir_path\n",
+    "        settings['inputs'] = inputs\n",
+    "        \n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
-    "        printProgress('')\n",
     "        \n",
     "        NOC_download.retrieve_median_sar(inputs)\n",
     "        \n",
