--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
     "         ['2020-01-01', '2020-06-30'],\n",
     "         ['2020-07-01', '2020-12-31']]\n",
     "\n",
-    "inputs = {'sat_name': 'S1'}"
+    "inputs = {'sat_name': 'S1', 'pixel_size': 10}"
    ]
   },
   {
@@ -67,136 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  processing ArgyleAirport: ['2019-01-01', '2019-06-30']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 25 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing ArgyleAirport: ['2019-07-01', '2019-12-31']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 29 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing ArgyleAirport: ['2020-01-01', '2020-06-30']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 29 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing ArgyleAirport: ['2020-07-01', '2020-12-31']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 28 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing IndianBay: ['2019-01-01', '2019-06-30']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 26 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing IndianBay: ['2019-07-01', '2019-12-31']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 42 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing IndianBay: ['2020-01-01', '2020-06-30']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 36 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing IndianBay: ['2020-07-01', '2020-12-31']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 35 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing SaltWhistleBay: ['2019-01-01', '2019-06-30']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 26 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing SaltWhistleBay: ['2019-07-01', '2019-12-31']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 42 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing SaltWhistleBay: ['2020-01-01', '2020-06-30']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 36 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n",
-      "progress  >>>  processing SaltWhistleBay: ['2020-07-01', '2020-12-31']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 35 images\n",
-      "progress  >>>  downloading median image\n",
-      "progress  >>>  writing metadata\n",
-      "progress  >>>  GEE connection closed\n",
-      "*******\n",
-      "success   ~~~  median image retreived\n",
-      "*******\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'bands'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-bd0eab0f66fd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mNOC_download\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mretrieve_median_sar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m \u001b[0mmetadata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNOC_download\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave_metadata\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msettings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_download.py\u001b[0m in \u001b[0;36msave_metadata\u001b[1;34m(settings)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0msite_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'site_name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mmedian_dir_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'median_dir_path'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mband_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msettings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'bands'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msat_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m# initialize metadata dict\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'bands'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for site in sites:\n",
     "    for date_pair in dates:\n",
@@ -217,7 +90,7 @@
     "        \n",
     "        NOC_download.retrieve_median_sar(inputs)\n",
     "        \n",
-    "metadata = NOC_download.save_metadata(settings)"
+    "    metadata = NOC_download.save_metadata(settings)"
    ]
   },
   {
@@ -249,7 +122,7 @@
     "\n",
     "        settings['inputs'] = inputs\n",
     "\n",
-    "        metadata = NOC_download.load_metadata(inputs)\n",
+    "        metadata = NOC_download.load_metadata(settings)\n",
     "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
     "        printProgress('')\n",
     "\n",
