--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -106,19 +106,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "inputs['polarisation'] = 'VH'\n",
+    "inputs['sigma'] = 5\n",
+    "inputs['create_reference_shoreline'] = True  \n",
+    "inputs['reference_threshold'] = 0\n",
+    "\n",
     "for site in sites:\n",
     "    for date_pair in dates:\n",
     "        \n",
     "        site_name = site[:site.find('.')]\n",
     "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "\n",
-    "        inputs = {'dates': date_pair, 'sat_name': 'S1', 'site_name': site_name,\n",
-    "                  'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
-    "\n",
-    "        inputs['polarisation'] = 'VH'\n",
-    "        inputs['sigma'] = 5\n",
-    "        inputs['create_reference_shoreline'] = True  \n",
-    "        inputs['reference_threshold'] = 0\n",
+    "        inputs['site_name'] = site_name\n",
+    "        inputs['dates'] = date_pair\n",
+    "        inputs['median_dir_path'] = median_dir_path\n",
     "\n",
     "        settings['inputs'] = inputs\n",
     "\n",
@@ -127,7 +128,7 @@
     "        printProgress('')\n",
     "\n",
     "        %matplotlib qt\n",
-    "        shorelines = NOC_shoreline.extract_shorelines_sar(metadata, settings)"
+    "        shorelines = NOC_shoreline.extract_shoreline_sar(metadata, settings)"
    ]
   },
   {
