--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -82,7 +82,7 @@
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -127,16 +127,7 @@
     "        \n",
     "        NOC_download.retrieve_median_optical(settings)\n",
     "    \n",
-    "metadata = NOC_download.save_metadata(settings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata"
+    "    metadata = NOC_download.save_metadata(settings)"
    ]
   },
   {
