SWIR index added

--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -78,7 +78,8 @@
     "                             'ms':  [['B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B10', 'BQA'], 30]},\n",
     "                      'S2': {'10m': [['B2', 'B3', 'B4', 'B8'], 10],\n",
     "                             '20m': [['B5', 'B6', 'B7', 'B8A', 'B11', 'B12'], 20],\n",
-    "                             '60m': [['B12'], 60]}, }\n",
+    "                             '60m': [['B12'], 60]}, },\n",
+    "               SWIR = 'B12',\n",
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
@@ -143,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['pansharpen'] = False\n",
+    "inputs['pansharpen'] = True\n",
     "inputs['reference_threshold'] = 0\n",
     "inputs['dates'] = ['2019-01-01', '2020-12-31']\n",
     "    \n",
