--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -37,7 +37,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32620,\n",
+    "settings ={'output_epsg': 32630,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
     "           \n",
@@ -83,7 +83,7 @@
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
