--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -116,7 +116,6 @@
     "        \n",
     "        site_name = site[:site.find('.')]\n",
     "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "\n",
     "        inputs['site_name'] = site_name\n",
     "        inputs['dates'] = date_pair\n",
     "        inputs['median_dir_path'] = median_dir_path\n",
@@ -144,18 +143,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "inputs['dates'] = ['2019-01-01', '2020-12-31']\n",
+    "inputs['create_reference_shoreline'] = False\n",
+    "inputs['reference_threshold'] = 0\n",
+    "inputs['polarisation'] = 'VH'\n",
+    "    \n",
     "for site in sites:\n",
     "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "\n",
-    "    inputs = {'dates': ['2019-01-01', '2020-12-31'], 'sat_name': 'S1', 'site_name': site_name,\n",
-    "          'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
-    "\n",
-    "    inputs['create_reference_shoreline'] = False\n",
-    "    inputs['reference_threshold'] = 0\n",
-    "    inputs['polarisation'] = 'VH'\n",
-    "    \n",
+    "    inputs['site_name'] = site_name,\n",
+    "    inputs['median_dir_path'] = median_dir_path}\n",
     "    settings['inputs'] = inputs    \n",
     "\n",
     "    %matplotlib qt\n",
@@ -175,20 +173,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "inputs['create_reference_shoreline'] = False  \n",
+    "inputs['reference_threshold'] = -23.0\n",
+    "inputs['polarisation'] = 'VH'\n",
+    "\n",
     "for site in sites:\n",
     "    for date_pair in dates:\n",
     "        \n",
     "        site_name = site[:site.find('.')]\n",
     "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "\n",
-    "        inputs = {'dates': date_pair, 'sat_name': 'S1', 'site_name': site_name,\n",
-    "              'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
-    "        \n",
-    "        inputs['create_reference_shoreline'] = False\n",
-    "        inputs['reference_threshold'] = -23.0\n",
-    "        inputs['polarisation'] = 'VH'\n",
-    "        \n",
-    "        settings['inputs'] = inputs\n",
+    "        inputs['site_name'] = site_name\n",
+    "        inputs['dates'] = date_pair\n",
+    "        inputs['median_dir_path'] = median_dir_path\n",
+    "        settings['inputs'] = inputs    \n",
     "        \n",
     "        metadata = NOC_download.load_metadata(settings)\n",
     "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
