--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -119,7 +119,6 @@
     "        inputs['site_name'] = site_name\n",
     "        inputs['dates'] = date_pair\n",
     "        inputs['median_dir_path'] = median_dir_path\n",
-    "\n",
     "        settings['inputs'] = inputs\n",
     "\n",
     "        metadata = NOC_download.load_metadata(settings)\n",
@@ -152,8 +151,8 @@
     "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "    inputs['site_name'] = site_name,\n",
-    "    inputs['median_dir_path'] = median_dir_path}\n",
+    "    inputs['site_name'] = site_name\n",
+    "    inputs['median_dir_path'] = median_dir_path\n",
     "    settings['inputs'] = inputs    \n",
     "\n",
     "    %matplotlib qt\n",
@@ -174,7 +173,7 @@
    "outputs": [],
    "source": [
     "inputs['create_reference_shoreline'] = False  \n",
-    "inputs['reference_threshold'] = -23.0\n",
+    "inputs['reference_threshold'] = -24.0\n",
     "inputs['polarisation'] = 'VH'\n",
     "\n",
     "for site in sites:\n",
