--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,9 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-828dd73093b5>, line 53)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-828dd73093b5>\"\u001b[1;36m, line \u001b[1;32m53\u001b[0m\n\u001b[1;33m    SWIR = 'B12',\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -79,7 +88,7 @@
     "                      'S2': {'10m': [['B2', 'B3', 'B4', 'B8'], 10],\n",
     "                             '20m': [['B5', 'B6', 'B7', 'B8A', 'B11', 'B12'], 20],\n",
     "                             '60m': [['B12'], 60]}, },\n",
-    "               SWIR = 'B12',\n",
+    "               SWIR: 'B12',\n",
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
