--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -79,7 +79,7 @@
     "                      'S2': {'10m': [['B2', 'B3', 'B4', 'B8'], 10],\n",
     "                             '20m': [['B5', 'B6', 'B7', 'B8A', 'B11', 'B12'], 20],\n",
     "                             '60m': [['B12'], 60]}, },\n",
-    "               SWIR: 'B12',\n",
+    "            'SWIR': 'B12',\n",
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
