reference shorelines fixed

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "inputs['polarisation'] = 'VH'\n",
-    "inputs['sigma'] = 5\n",
+    "inputs['sigma'] = 1\n",
     "inputs['create_reference_shoreline'] = True  \n",
     "inputs['reference_threshold'] = 0\n",
     "\n",
@@ -173,7 +173,7 @@
    "outputs": [],
    "source": [
     "inputs['create_reference_shoreline'] = False  \n",
-    "inputs['reference_threshold'] = -24.0\n",
+    "inputs['reference_threshold'] = -2.0\n",
     "inputs['polarisation'] = 'VH'\n",
     "\n",
     "for site in sites:\n",
@@ -185,6 +185,8 @@
     "        inputs['dates'] = date_pair\n",
     "        inputs['median_dir_path'] = median_dir_path\n",
     "        settings['inputs'] = inputs    \n",
+    "        \n",
+    "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
     "        metadata = NOC_download.load_metadata(settings)\n",
     "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
