--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -97,43 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## extract reference shorelines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inputs['polarisation'] = 'VH'\n",
-    "inputs['sigma'] = 1\n",
-    "inputs['create_reference_shoreline'] = True  \n",
-    "inputs['reference_threshold'] = 0\n",
-    "\n",
-    "for site in sites:\n",
-    "    for date_pair in dates:\n",
-    "        \n",
-    "        site_name = site[:site.find('.')]\n",
-    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "        inputs['site_name'] = site_name\n",
-    "        inputs['dates'] = date_pair\n",
-    "        inputs['median_dir_path'] = median_dir_path\n",
-    "        settings['inputs'] = inputs\n",
-    "\n",
-    "        metadata = NOC_download.load_metadata(settings)\n",
-    "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
-    "        printProgress('')\n",
-    "\n",
-    "        %matplotlib qt\n",
-    "        shorelines = NOC_shoreline.extract_shoreline_sar(metadata, settings)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## find reference threshold"
+    "## find reference threshold and extract reference shoreline"
    ]
   },
   {
@@ -143,9 +107,10 @@
    "outputs": [],
    "source": [
     "inputs['dates'] = ['2019-01-01', '2020-12-31']\n",
-    "inputs['create_reference_shoreline'] = False\n",
+    "inputs['create_reference_shoreline'] = True\n",
     "inputs['reference_threshold'] = 0\n",
     "inputs['polarisation'] = 'VH'\n",
+    "inputs['sigma'] = 1\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -154,9 +119,12 @@
     "    inputs['site_name'] = site_name\n",
     "    inputs['median_dir_path'] = median_dir_path\n",
     "    settings['inputs'] = inputs    \n",
+    "    \n",
+    "    printProgress(f'processing {site_name}')\n",
     "\n",
     "    %matplotlib qt\n",
-    "    NOC_shoreline.find_reference_threshold(settings)        "
+    "    reference_threshold = NOC_shoreline.find_reference_threshold(settings)        \n",
+    "    inputs['create_reference_shoreline'] = True"
    ]
   },
   {
@@ -173,7 +141,7 @@
    "outputs": [],
    "source": [
     "inputs['create_reference_shoreline'] = False  \n",
-    "inputs['reference_threshold'] = -2.0\n",
+    "inputs['reference_threshold'] = reference_threshold\n",
     "inputs['polarisation'] = 'VH'\n",
     "\n",
     "for site in sites:\n",
