saving shorelines and jpegs

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -123,8 +123,7 @@
     "    printProgress(f'processing {site_name}')\n",
     "\n",
     "    %matplotlib qt\n",
-    "    reference_threshold = NOC_shoreline.find_reference_threshold(settings)        \n",
-    "    inputs['create_reference_shoreline'] = True"
+    "    reference_threshold = NOC_shoreline.find_reference_threshold(settings)"
    ]
   },
   {
@@ -160,24 +159,15 @@
     "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
     "\n",
     "        %matplotlib qt\n",
-    "        shoreline = NOC_shoreline.extract_shoreline_sar(metadata, settings)\n",
-    "\n",
-    "        gdf = NOC_tools.output_to_gdf(shoreline, metadata)\n",
-    "\n",
-    "        file_string = f'{site_name}_shoreline_{inputs[\"polarisation\"]}' + \\\n",
-    "                      f'_S{inputs[\"dates\"][0]}_E{inputs[\"dates\"][1]}.geojson'\n",
-    "\n",
-    "        if  ~gdf.empty:\n",
-    "            gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
-    "            # save GEOJSON layer to file\n",
-    "            gdf.to_file(os.path.join(inputs['median_dir_path'],\n",
-    "                                     file_string),\n",
-    "                                     driver='GeoJSON', encoding='utf-8')\n",
-    "            printProgress(f'written: {file_string}')\n",
-    "            print()\n",
-    "        else:\n",
-    "            printWarning('no shorelines to be seen ...')"
+    "        NOC_shoreline.extract_shoreline_sar(metadata, settings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
