--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -159,7 +159,7 @@
     "    printProgress(f'processing {site_name}')\n",
     "    \n",
     "    %matplotlib qt\n",
-    "    NOC_shoreline.find_reference_threshold(settings)"
+    "    reference_threshold = NOC_shoreline.find_reference_threshold(settings)"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = -0.15\n",
+    "inputs['reference_threshold'] = reference_threshold\n",
     "\n",
     "for site in sites:\n",
     "    for date_pair in dates:\n",
@@ -194,14 +194,7 @@
     "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
     "        \n",
     "        %matplotlib qt\n",
-    "        shoreline = NOC_shoreline.extract_shoreline_optical(metadata, settings)\n",
-    "        \n",
-    "        gdf = NOC_tools.output_to_gdf(shoreline, metadata)\n",
-    "        file_string = f'{site_name}_shorelines_{inputs[\"sat_name\"]}' +\\\n",
-    "                      f'_S{date_pair[0]}_E{date_pair[1]}.geojson'\n",
-    "        gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])}\n",
-    "        gdf.to_file(os.path.join(median_dir_path, file_string),\n",
-    "                    driver='GeoJSON', encoding='utf-8')"
+    "        NOC_shoreline.extract_shoreline_optical(metadata, settings)"
    ]
   }
  ],
