--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -38,19 +38,25 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={\n",
-    "           'output_epsg': 32630,\n",
+    "           'output_epsg': 32620,\n",
     "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
     "          }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
-    "dates = [['2019-01-01', '2019-06-30'],\n",
+    "dates = [['2016-01-01', '2016-06-30'],\n",
+    "         ['2016-07-01', '2016-12-31']\n",
+    "         ['2017-01-01', '2017-06-30'],\n",
+    "         ['2017-07-01', '2017-12-31']\n",
+    "         ['2018-01-01', '2018-06-30'],\n",
+    "         ['2018-07-01', '2018-12-31'],\n",
+    "         ['2019-01-01', '2019-06-30'],\n",
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
     "         ['2020-07-01', '2020-12-31']]\n",
@@ -108,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['dates'] = ['2019-01-01', '2020-12-31']\n",
+    "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
     "inputs['create_reference_shoreline'] = True\n",
     "inputs['reference_threshold'] = 0\n",
     "inputs['polarisation'] = 'VH'\n",
