--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -83,12 +83,18 @@
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
-    "dates = [['2019-01-01', '2019-06-30'],\n",
+    "dates = [['2016-01-01', '2016-06-30'],\n",
+    "         ['2016-07-01', '2016-12-31']\n",
+    "         ['2017-01-01', '2017-06-30'],\n",
+    "         ['2017-07-01', '2017-12-31']\n",
+    "         ['2018-01-01', '2018-06-30'],\n",
+    "         ['2018-07-01', '2018-12-31'],\n",
+    "         ['2019-01-01', '2019-06-30'],\n",
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
     "         ['2020-07-01', '2020-12-31']]\n",
