--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,9 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-d4be4d8188fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     62\u001b[0m dates = [['2016-01-01', '2016-06-30'],\n\u001b[0;32m     63\u001b[0m          \u001b[1;33m[\u001b[0m\u001b[1;34m'2016-07-01'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2016-12-31'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m          \u001b[1;33m[\u001b[0m\u001b[1;34m'2017-01-01'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2017-06-30'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     65\u001b[0m          \u001b[1;33m[\u001b[0m\u001b[1;34m'2017-07-01'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2017-12-31'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m          \u001b[1;33m[\u001b[0m\u001b[1;34m'2018-01-01'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2018-06-30'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -37,7 +49,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32630,\n",
+    "settings ={'output_epsg': 32620,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
     "           \n",
@@ -89,9 +101,9 @@
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "dates = [['2016-01-01', '2016-06-30'],\n",
-    "         ['2016-07-01', '2016-12-31']\n",
+    "         ['2016-07-01', '2016-12-31'],\n",
     "         ['2017-01-01', '2017-06-30'],\n",
-    "         ['2017-07-01', '2017-12-31']\n",
+    "         ['2017-07-01', '2017-12-31'],\n",
     "         ['2018-01-01', '2018-06-30'],\n",
     "         ['2018-07-01', '2018-12-31'],\n",
     "         ['2019-01-01', '2019-06-30'],\n",
