--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "settings ={\n",
     "           'output_epsg': 32620,\n",
-    "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
+    "           'max_dist_ref': 200,           # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
     "          }\n",
     "\n",
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "inputs['create_reference_shoreline'] = False  \n",
-    "inputs['reference_threshold'] = reference_threshold\n",
+    "inputs['reference_threshold'] = -24\n",
     "inputs['polarisation'] = 'VH'\n",
     "\n",
     "for site in sites:\n",
