--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -117,7 +117,8 @@
     "inputs['create_reference_shoreline'] = True\n",
     "inputs['reference_threshold'] = 0\n",
     "inputs['polarisation'] = 'VH'\n",
-    "inputs['sigma'] = 1\n",
+    "inputs['sigma'] = 5\n",
+    "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -147,7 +148,7 @@
    "outputs": [],
    "source": [
     "inputs['create_reference_shoreline'] = False  \n",
-    "inputs['reference_threshold'] = -24\n",
+    "inputs['reference_threshold'] = reference_threshold\n",
     "inputs['polarisation'] = 'VH'\n",
     "\n",
     "for site in sites:\n",
