--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,21 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-d4be4d8188fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     62\u001b[0m dates = [['2016-01-01', '2016-06-30'],\n\u001b[0;32m     63\u001b[0m          \u001b[1;33m[\u001b[0m\u001b[1;34m'2016-07-01'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2016-12-31'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m          \u001b[1;33m[\u001b[0m\u001b[1;34m'2017-01-01'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2017-06-30'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     65\u001b[0m          \u001b[1;33m[\u001b[0m\u001b[1;34m'2017-07-01'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2017-12-31'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m          \u001b[1;33m[\u001b[0m\u001b[1;34m'2018-01-01'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2018-06-30'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -50,6 +38,7 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={'output_epsg': 32620,\n",
+    "           'max_dist_ref': 100,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
     "           \n",
@@ -166,7 +155,6 @@
    "source": [
     "inputs['pansharpen'] = True\n",
     "inputs['reference_threshold'] = 0\n",
-    "inputs['dates'] = ['2019-01-01', '2020-12-31']\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -210,9 +198,11 @@
     " \n",
     "        inputs['dates'] = date_pair \n",
     "        settings['inputs'] = inputs\n",
+    "        settings['max_dist_ref'] = 150\n",
     "\n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
+    "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
     "        metadata = NOC_download.load_metadata(settings)\n",
     "        \n",
     "        %matplotlib qt\n",
