--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -155,6 +155,7 @@
    "source": [
     "inputs['pansharpen'] = True\n",
     "inputs['reference_threshold'] = 0\n",
+    "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -184,7 +185,8 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = reference_threshold\n",
+    "inputs['reference_threshold'] = -0.37\n",
+    "settings['max_dist_ref'] = 100\n",
     "\n",
     "for site in sites:\n",
     "    \n",
@@ -198,7 +200,6 @@
     " \n",
     "        inputs['dates'] = date_pair \n",
     "        settings['inputs'] = inputs\n",
-    "        settings['max_dist_ref'] = 150\n",
     "\n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
