reference shorelines no longer date stamped

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -38,14 +38,14 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={\n",
-    "           'output_epsg': 32620,\n",
-    "           'max_dist_ref': 200,           # max distance (in meters) allowed from the reference shoreline\n",
+    "           'output_epsg': 32630,\n",
+    "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
     "          }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -114,10 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['create_reference_shoreline'] = True\n",
-    "inputs['reference_threshold'] = 0\n",
     "inputs['polarisation'] = 'VH'\n",
-    "inputs['sigma'] = 5\n",
+    "inputs['sigma'] = 2\n",
     "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
     "    \n",
     "for site in sites:\n",
@@ -147,7 +145,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['create_reference_shoreline'] = False  \n",
     "inputs['reference_threshold'] = reference_threshold\n",
     "inputs['polarisation'] = 'VH'\n",
     "\n",
@@ -157,7 +154,7 @@
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "    inputs['site_name'] = site_name\n",
     "    inputs['median_dir_path'] = median_dir_path \n",
-    "    settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
+    "    settings['reference_shoreline'] = NOC_preprocess.load_reference_shoreline_median(inputs)\n",
     "        \n",
     "    for date_pair in dates:\n",
     "\n",
