--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -37,7 +37,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32620,\n",
+    "settings ={'output_epsg': 32630,\n",
     "           'max_dist_ref': 100,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
@@ -84,7 +84,7 @@
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = -0.37\n",
+    "inputs['reference_threshold'] = reference_threshold\n",
     "settings['max_dist_ref'] = 100\n",
     "\n",
     "for site in sites:\n",
@@ -209,6 +209,13 @@
     "        %matplotlib qt\n",
     "        NOC_shoreline.extract_shoreline_optical(metadata, settings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
