ready to roll ...

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -38,14 +38,14 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={\n",
-    "           'output_epsg': 32630,\n",
+    "           'output_epsg': 32620,\n",
     "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
     "          }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
