--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -37,7 +37,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32630,\n",
+    "settings ={'output_epsg': 32620,\n",
     "           'max_dist_ref': 100,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
@@ -84,7 +84,7 @@
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -154,7 +154,6 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = 0\n",
     "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
     "    \n",
     "for site in sites:\n",
@@ -185,7 +184,7 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = reference_threshold\n",
+    "inputs['reference_threshold'] = -25\n",
     "settings['max_dist_ref'] = 100\n",
     "\n",
     "for site in sites:\n",
@@ -194,7 +193,8 @@
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "    inputs['site_name'] = site_name\n",
     "    inputs['median_dir_path'] = median_dir_path\n",
-    "    settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
+    "    settings['reference_shoreline'] = NOC_preprocess.load_reference_shoreline_median(inputs)\n",
+    "    printProgress('')\n",
     "        \n",
     "    for date_pair in dates:\n",
     " \n",
@@ -203,7 +203,6 @@
     "\n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
-    "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
     "        metadata = NOC_download.load_metadata(settings)\n",
     "        \n",
     "        %matplotlib qt\n",
