--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "inputs['polarisation'] = 'VH'\n",
     "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
-    "inputs['sigma'] = 5\n",
+    "inputs['sigma'] = 2\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -145,8 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['reference_threshold'] = -25\n",
+    "inputs['reference_threshold'] = reference_threshold\n",
     "inputs['polarisation'] = 'VH'\n",
+    "settings['max_dist_ref'] = 50\n",
     "\n",
     "for site in sites:\n",
     "    \n",
